2006-08-12  Nathaniel Smith  <njs@pobox.com>

	* database.cc (put_roster): We only need one way to reconstruct a
	given roster -- check whether the _old_ roster is stored in full
	before doing deltification, rather than that the _new_ roster
	(that we stored in full 10 lines up) is stored in full.

2006-08-11  Timothy Brownawell  <tbrownaw@gmail.com>

	* std_hooks.lua: merge3 merger selection is horrible. Make it better.

2006-08-10  Richard Levitte  <richard@levitte.org>

	* cmd_ws_commit.cc (CMD(commit)):
	* database_check.cc (report_certs): Don't use positional format
	specifiers in the C++ source files.  Positional format
	specifiers should only be used in the translation strings, if
	needed.  For further information/opinions, see
	http://lists.gnu.org/archive/html/monotone-devel/2006-07/msg00357.html
	* po/sv.po: Clear the fuzzies created by this change.

2006-08-09  Nathaniel Smith  <njs@pobox.com>

	* diff_patch.cc (record_merge): Don't error out when two merges
	give the same resulting file.

2006-08-08  Timothy Brownawell  <tbrownaw@gmail.com>

	* Makefile.am: Fix run_tester_tests to run tester-testsuite.lua instead
	of testsuite.lua .

2006-08-07  Lapo Luchini  <lapo@lapo.it>

	* po/it.po: Updated and translated a few more strings (45 to go).

2006-08-07  Richard Levitte  <richard@levitte.org>

	* po/POTFILES.in: Remove main.cc, since it's been removed from
	the source tree.
	* po/sv.po: A fuzzy and two untranslated strings to translate.

2006-08-06  Nathaniel Smith  <njs@pobox.com>

	* packet.cc (extract_packets, read_packets): Make some const
	strings static (patch from Vaclav Haisman).

2006-08-06  Thomas Moschny  <thomas.moschny@gmx.de>

	Make the block size for automate stdio configurable:
	* constants.hh, constants.cc: Remove automate_stdio_size constant.
	* app_state.cc, app_state.hh, options.hh, monotone.cc: Add new
	option commandline option '--automate-stdio-size'. Default is 1024, 
	which is the value of the old constant.