@@ -286,16 +286,12 @@ compute_delta(string const & a,
   // xdelta. several places of the xdelta code prefer assertions which are
   // only true with non-empty chunks anyways.
 
-  if (a == b)
-    {
-      delta.clear();
-      return;
-    }
-
   if (a.size() == 0 && b.size() != 0)
     delta_insns.push_back(insn(b));
   else if (a.size() != 0 && b.size() == 0)
     delta_insns.push_back(insn(0, 0));
+  else if (a == b)
+    delta_insns.push_back(insn(0, a.size()));
   else
     {
       I(a.size() > 0);
@@ -418,35 +414,6 @@ apply_delta(string const & a,
   da->next();
   da->finish(b);
 }
-
-struct
-size_accumulating_delta_applicator :
-  public delta_applicator
-{
-  u64 & sz;
-  size_accumulating_delta_applicator(u64 & s) : sz(s) {}
-  virtual void begin(string const & base) {}
-  virtual void next() {}
-  virtual void finish(string & out) {}
-
-  virtual void copy(string::size_type pos,
-                    string::size_type len)
-  { sz += len; }
-  virtual void insert(string const & str)
-  { sz += str.size(); }
-};
-
-
-u64
-measure_delta_target_size(string const & delta)
-{
-  u64 sz = 0;
-  shared_ptr<delta_applicator> da(new size_accumulating_delta_applicator(sz));
-  apply_delta(da, delta);
-  return sz;
-}
-
-
 
 // piecewise-applicator stuff follows (warning: ugly)
 
@@ -795,6 +762,59 @@ invert_xdelta(string const & old_str,
 #ifdef BUILD_UNIT_TESTS
 
 #include "unit_tests.hh"
+
+string
+apply_via_normal(string const & base, string const & delta)
+{
+  string tmp;
+  apply_delta(base, delta, tmp);
+  return tmp;
+}
+
+string
+apply_via_piecewise(string const & base, string const & delta)
+{
+  shared_ptr<delta_applicator> appl = new_piecewise_applicator();
+  appl->begin(base);
+  apply_delta(appl, delta);
+  appl->next();
+  string tmp;
+  appl->finish(tmp);
+  return tmp;
+}
+
+void
+spin(string a, string b)
+{
+  string ab, ba;
+  compute_delta(a, b, ab);
+  compute_delta(b, a, ba);
+  BOOST_CHECK(a == apply_via_normal(b, ba));
+  BOOST_CHECK(a == apply_via_piecewise(b, ba));
+  BOOST_CHECK(b == apply_via_normal(a, ab));
+  BOOST_CHECK(b == apply_via_piecewise(a, ab));
+  string ab_inverted, ba_inverted;
+  invert_xdelta(a, ab, ab_inverted);
+  invert_xdelta(b, ba, ba_inverted);
+  BOOST_CHECK(a == apply_via_normal(b, ab_inverted));
+  BOOST_CHECK(a == apply_via_piecewise(b, ab_inverted));
+  BOOST_CHECK(b == apply_via_normal(a, ba_inverted));
+  BOOST_CHECK(b == apply_via_piecewise(a, ba_inverted));
+}
+
+void
+xdelta_simple_cases()
+{
+  L(FL("empty/empty"));
+  spin("", "");
+  L(FL("empty/short"));
+  spin("", "a");
+  L(FL("empty/longer"));
+  spin("", "asdfasdf");
+  L(FL("two identical strings"));
+  spin("same string", "same string");
+}
+
 #ifdef WIN32
 #define BOOST_NO_STDC_NAMESPACE
 #endif
@@ -883,38 +903,51 @@ xdelta_random_simple_delta_test()
 {
   for (int i = 0; i < 100; ++i)
     {
-      string a, b, fdel, rdel, c, d;
+      string a, b;
       xdelta_random_string(a);
       b = a;
       xdelta_randomly_change(b);
       xdelta_randomly_insert(b);
       xdelta_randomly_delete(b);
-      compute_delta(a, b, fdel);
-      compute_delta(b, a, rdel);
-      L(FL("src %d, dst %d, fdel %d, rdel %d")
-        % a.size() % b.size()% fdel.size() % rdel.size()) ;
-      if (fdel.size() == 0)
-        {
-          L(FL("confirming src == dst and rdel == 0"));
-          BOOST_CHECK(a == b);
-          BOOST_CHECK(rdel.size() == 0);
-        }
-      else
-        {
-          apply_delta(a, fdel, c);
-          apply_delta(b, rdel, d);
-          L(FL("confirming dst1 %d, dst2 %d") % c.size() % d.size());
-          BOOST_CHECK(b == c);
-          BOOST_CHECK(a == d);
-        }
+      spin(a, b);
     }
+}
+
+void
+xdelta_random_piecewise_delta_test()
+{
+  for (int i = 0; i < 50; ++i)
+    {
+      string prev, next, got;
+      xdelta_random_string(prev);
+      shared_ptr<delta_applicator> appl = new_piecewise_applicator();
+      appl->begin(prev);
+      for (int j = 0; j < 5; ++j)
+        {
+          appl->finish(got);
+          BOOST_CHECK(got == prev);
+          next = prev;
+          xdelta_randomly_change(next);
+          xdelta_randomly_insert(next);
+          xdelta_randomly_delete(next);
+          string delta;
+          compute_delta(prev, next, delta);
+          apply_delta(appl, delta);
+          appl->next();
+          prev = next;
+        }
+      appl->finish(got);
+      BOOST_CHECK(got == prev);
+  }
 }
 
 void
 add_xdelta_tests(test_suite * suite)
 {
   I(suite);
+  suite->add(BOOST_TEST_CASE(&xdelta_simple_cases));
   suite->add(BOOST_TEST_CASE(&xdelta_random_simple_delta_test));
+  suite->add(BOOST_TEST_CASE(&xdelta_random_piecewise_delta_test));
 }
 
 #endif // BUILD_UNIT_TESTS
